@@ -695,6 +695,30 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_WEBAPP_ADDRESS
+argument_list|,
+name|MiniYARNCluster
+operator|.
+name|getHostname
+argument_list|()
+operator|+
+literal|":"
+operator|+
+name|yarnCluster
+operator|.
+name|getApplicationHistoryServer
+argument_list|()
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|waitForNMsToRegister
 argument_list|()
 expr_stmt|;
